// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders Daylight when sunset is after sunrise 1`] = `
<DocumentFragment>
  <div
    class="progressBarWrapper"
  >
    <div
      class="progress"
    >
      <div
        aria-valuemax="1440"
        aria-valuemin="0"
        aria-valuenow="383"
        class="progress-bar bg-success"
        role="progressbar"
        style="width: 26.597%;"
      />
      <div
        aria-valuemax="1440"
        aria-valuemin="0"
        aria-valuenow="768"
        class="progress-bar bg-warning"
        role="progressbar"
        style="width: 53.333%;"
      />
      <div
        aria-valuemax="1440"
        aria-valuemin="0"
        aria-valuenow="289"
        class="progress-bar bg-success"
        role="progressbar"
        style="width: 20.069%;"
      />
    </div>
    <div
      class="labels"
    >
      <div
        class="startHour"
      >
        00:00
      </div>
      <div
        class="endHour"
      >
        23:59
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`renders Daylight when sunset is after sunrise 2`] = `
<DocumentFragment>
  <div
    class="progressBarWrapper"
  >
    <div
      class="progress"
    >
      <div
        aria-valuemax="1440"
        aria-valuemin="0"
        aria-valuenow="432"
        class="progress-bar bg-warning"
        role="progressbar"
        style="width: 30%;"
      />
      <div
        aria-valuemax="1440"
        aria-valuemin="0"
        aria-valuenow="671"
        class="progress-bar bg-success"
        role="progressbar"
        style="width: 46.597%;"
      />
      <div
        aria-valuemax="1440"
        aria-valuemin="0"
        aria-valuenow="335"
        class="progress-bar bg-warning"
        role="progressbar"
        style="width: 23.264%;"
      />
    </div>
    <div
      class="labels"
    >
      <div
        class="startHour"
      >
        00:00
      </div>
      <div
        class="endHour"
      >
        23:59
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`renders DaylightAcrossDays 1`] = `
<DocumentFragment>
  <div
    class="progressBarWrapper"
  >
    <div
      class="progress"
    >
      <div
        aria-valuemax="1440"
        aria-valuemin="0"
        aria-valuenow="1152"
        class="progress-bar bg-warning"
        role="progressbar"
        style="width: 80%;"
      />
      <div
        aria-valuemax="1440"
        aria-valuemin="0"
        aria-valuenow="769"
        class="progress-bar bg-success"
        role="progressbar"
        style="width: 53.403%;"
      />
      <div
        aria-valuemax="1440"
        aria-valuemin="0"
        aria-valuenow="1055"
        class="progress-bar bg-warning"
        role="progressbar"
        style="width: 73.264%;"
      />
    </div>
    <div
      class="labels"
    >
      <div
        class="startHour"
      >
        00:00
      </div>
      <div
        class="endHour"
      >
        23:59
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`renders DaylightDuringDay 1`] = `
<DocumentFragment>
  <div
    class="progressBarWrapper"
  >
    <div
      class="progress"
    >
      <div
        aria-valuemax="1440"
        aria-valuemin="0"
        aria-valuenow="383"
        class="progress-bar bg-success"
        role="progressbar"
        style="width: 26.597%;"
      />
      <div
        aria-valuemax="1440"
        aria-valuemin="0"
        aria-valuenow="768"
        class="progress-bar bg-warning"
        role="progressbar"
        style="width: 53.333%;"
      />
      <div
        aria-valuemax="1440"
        aria-valuemin="0"
        aria-valuenow="289"
        class="progress-bar bg-success"
        role="progressbar"
        style="width: 20.069%;"
      />
    </div>
    <div
      class="labels"
    >
      <div
        class="startHour"
      >
        00:00
      </div>
      <div
        class="endHour"
      >
        23:59
      </div>
    </div>
  </div>
</DocumentFragment>
`;
